# tcc

./: candidate.py  candidatos.txt  db.Dockerfile  docker-compose.yml  get_data.py  get_titles.py  graphs.ipynb  main.py  parse.ipynb  populate_db.py  pyproject.toml  search.py  selection.py  teste.ipynb  traverse_sitemap.py
src/: __main__.py  api.py  app.py  config.py  db.py
src/graphs/: g1.py  view.ipynb
src/models/: __init__.py  article.py  chunk.py  models.py
src/rag/: example.py  query.ipynb
src/rag/data/: article_0.txt  article_1.txt  article_2.txt  article_3.txt  article_4.txt
src/repositories/: article.py  chunk.py  entities.py
src/services/: chunking.py  ner.py  search.py  vectorizer.py
