[project]
name = "tcc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.13"
dependencies = [
    "ddgs[api]>=9.13.0",
    "duckduckgo-search>=8.1.1",
    "matplotlib>=3.10.8",
    "ollama>=0.6.1",
    "pandas>=2.2.3",
    "pip>=26.0.1",
    "psycopg[binary]>=3.2.9",
    "pyqt6>=6.11.0",
    "python-dotenv>=1.2.2",
    "spacy>=3.8.13",
    "trafilatura>=2.0.0",
    "xmltodict>=1.0.4",
]
