[project]
name = "tcc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.13"
dependencies = [
    "bertopic>=0.17.4",
    "chonkie>=1.6.2",
    "ddgs>=9.14.0",
    "flask>=3.1.3",
    "llama-index>=0.14.20",
    "llama-index-embeddings-ollama>=0.9.0",
    "llama-index-llms-ollama>=0.10.1",
    "matplotlib>=3.10.8",
    "numpy==2.0.0",
    "ollama>=0.6.1",
    "pandas>=2.2.3",
    "pgvector>=0.4.2",
    "pip>=26.0.1",
    "psycopg2>=2.9.11",
    "psycopg[binary]>=3.2.9",
    "pyqt6>=6.11.0",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
    "spacy>=3.8.13",
    "sqlacodegen>=4.0.3",
    "sqlalchemy>=2.0.49",
    "torch==2.1.1",
    "trafilatura>=2.0.0",
    "xmltodict>=1.0.4",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true  # Prevents other packages from accidentally using this index

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
